force-app/main/default/objects/Apex_Log__c/fields/Input_parameters__c.field-meta.xml
<CustomField>
    <fullName>Input_parameters__c</fullName>
    <label>Input parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>