force-app/main/default/objects/Apex_Log__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>TextArea</type>
</CustomField>